# internal/api/api.swagger.yaml
@@ -520,6 +520,54 @@ paths:
         minimum: 0
         required: true
       - in: query
+        name: FilterChassisByMaxLength[from]
+        description: Filter By Max Lenghth
+        type: number
+      - in: query
+        name: FilterChassisByMinLength[to]
+        description: Filter By Min Length
+        type: number
+      - in: query
+        name: FilterChassisByMaxWidth[from]
+        description: Filter By Max Width
+        type: number
+      - in: query
+        name: FilterChassisByMinWidth[to]
+        description: Filter By Min Width
+        type: number
+      - in: query
+        name: FilterChassisByMaxHeight[from]
+        description: Filter By Max Height
+        type: number
+      - in: query
+        name: FilterChassisByMinHeight[to]
+        description: Filter By Min Height
+        type: number
+      - in: query
+        name: FilterChassisByMaxWeight[from]
+        description: Filter By Max Weight
+        type: number
+      - in: query
+        name: FilterChassisByMinWeight[to]
+        description: Filter By Min Weight
+        type: number
+      - in: query
+        name: FilterChassisByMaxPowerHandlingCapabilityPerBoard[from]
+        description: Filter By Max Power Handling Capability Per Board
+        type: number
+      - in: query
+        name: FilterChassisByMinPowerHandlingCapabilityPerBoard[to]
+        description: Filter By Min Power Handling Capability Per Board
+        type: number
+      - in: query
+        name: FilterChassisByMaxTemperaturePerBoard[from]
+        description: Filter By Max Temperature Per Board
+        type: number
+      - in: query
+        name: FilterChassisByMinTemperaturePerBoard[to]
+        description: Filter By Min Temperature Per Board
+        type: number
+      - in: query
         name: sort[field]
         description: sort parametrs
         enum: [created_at, weight]
